--- a/01client/01wx/app.json
+++ b/01client/01wx/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    "pages/03bookstore/03bookstore",
+    "pages/textbookDetails/textbookDetails",
     "pages/index/index",
     "pages/logs/logs"
   ],
