--- a/01client/01wx/app.json
+++ b/01client/01wx/app.json
@@ -1,6 +1,9 @@
 {
   "pages": [
+    "pages/user/user",
     "pages/03bookstore/03bookstore",
+   
+    "pages/money/money",
     "pages/textbookDetails/textbookDetails",
     "pages/index/index",
     "pages/logs/logs"
