--- a/01client/01wx/app.json
+++ b/01client/01wx/app.json
@@ -1,8 +1,11 @@
 {
   "pages": [
-    "pages/03bookstore/03bookstore",
-    "pages/textbookDetails/textbookDetails",
     "pages/index/index",
+    "pages/03bookstore/03bookstore",
+    "pages/index01_child01/page",
+    "pages/index01_child02/page",
+    "pages/index02_child01/page",
+    "pages/textbookDetails/textbookDetails",
     "pages/logs/logs"
   ],
   "window": {
@@ -25,19 +28,19 @@
         "text": "首页"
       },
       {
-        "pagePath": "pages/02page/02page",
+        "pagePath": "pages/03bookstore/03bookstore",
         "iconPath": "imgs/book.png",
         "selectedIconPath": "imgs/book_select.png",
         "text": "教材"
       },
       {
-        "pagePath": "pages/02page/02page",
+        "pagePath": "pages/03bookstore/03bookstore",
         "iconPath": "imgs/vedio.png",
         "selectedIconPath": "imgs/vedio_select.png",
         "text": "视频"
       },
       {
-        "pagePath": "pages/02page/02page",
+        "pagePath": "pages/03bookstore/03bookstore",
         "iconPath": "imgs/user.png",
         "selectedIconPath": "imgs/user_select.png",
         "text": "我的"
