--- a/01client/01wx/app.json
+++ b/01client/01wx/app.json
@@ -21,32 +21,32 @@
   
   "tabBar": {
     "color": "#999",
-    "selectedColor": "#2368FF",
+    "selectedColor": "#73BAE4",
     "borderStyle": "white",
     "backgroundColor": "#ffffff",
     "list": [
       {
         "pagePath": "pages/index/index",
-        "iconPath": "imgs/home.png",
-        "selectedIconPath": "imgs/home_select.png",
+        "iconPath": "imgs/Menu_Home.png",
+        "selectedIconPath": "imgs/Menu_Home_select.png",
         "text": "首页"
       },
       {
         "pagePath": "pages/03bookstore/03bookstore",
-        "iconPath": "imgs/bookstore.png",
-        "selectedIconPath": "imgs/bookstore_select.png",
+        "iconPath": "imgs/book1.png",
+        "selectedIconPath": "imgs/book1_select.png",
         "text": "教材"
       },
       {
         "pagePath": "pages/video/video",
-        "iconPath": "imgs/vedio.png",
-        "selectedIconPath": "imgs/vedio_select.png",
+        "iconPath": "imgs/video.png",
+        "selectedIconPath": "imgs/video_select.png",
         "text": "视频"
       },
       {
         "pagePath": "pages/user/user",
-        "iconPath": "imgs/user.png",
-        "selectedIconPath": "imgs/user_select.png",
+        "iconPath": "imgs/sself.png",
+        "selectedIconPath": "imgs/sself_select.png",
         "text": "我的"
       }
     ]
