--- a/01client/01wx/project.config.json
+++ b/01client/01wx/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.1",
-	"appid": "wxefbea3c3047034da",
+	"appid": "wx087e7a7a21eff91a",
 	"projectname": "online%20study",
 	"debugOptions": {
 		"hidedInDevtools": []
